--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+          rel="stylesheet"
+          href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
+    />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
